tests/test0145.exp
Uncatched error has occurred.
Oops
#3 error: (tests/test0145.ctr: 4)
#2 * (tests/test0145.ctr: 5)
#1 * (tests/test0145.ctr: 6)
