tests/test0145.ctr
'SINGLE_LANGUAGE'.
{
	{
		thisBlock error: 'Oops'.
	} * 3.
} * 3.
